--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,9 @@
         <version>3.1.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.example</groupId>
+    <groupId>com.springboot.assignment2</groupId>
     <artifactId>SpringBootAssignment2</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>demo</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>17</java.version>
